--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
   </main>
 
+  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/homepage.js"></script>
 </body>
 
 </html>
